--- a/infoapp/src/main/res/values/themes.xml
+++ b/infoapp/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.JetpackComposeProjects" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.JetpackComposeProjects" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="android:statusBarColor">@color/indigo</item>
+    </style>
+    
 </resources>
