--- a/infoapp/src/main/res/values/main_array.xml
+++ b/infoapp/src/main/res/values/main_array.xml
@@ -22,4 +22,15 @@
         <item>Milan|milan.webp</item>
         <item>Juventus|juve.webp</item>
     </string-array>
+
+    <string-array name="germany">
+        <item>Bayern|bayern.webp</item>
+        <item>Borussia Dortmund|borussia.webp</item>
+    </string-array>
+
+    <string-array name="france">
+        <item>Bayern|bayern.webp</item>
+        <item>Borussia Dortmund|borussia.webp</item>
+    </string-array>
+
 </resources>
